# WinDebloater2.0

./: .gitignore  Cargo.toml  README.md
WinDebloaterOfficialGUI/: Cargo.toml
WinDebloaterOfficialGUI/src/: bloatware.rs  gui.rs  main.rs
WinDebloaterOfficialNoGUI/: Cargo.toml
WinDebloaterOfficialNoGUI/src/: main.rs  optimize.rs  win11.rs
src/: customize.rs  gui.rs  privacy.rs  restore.rs
