[package]
name = "WinDebloaterOfficial"
version = "0.1.0"
edition = "2024"

[dependencies]
eframe = { version = "0.24", default-features = false, features = ["default_fonts", "glow"] }
egui = "0.24"
tokio = { version = "1.0", features = ["full"] }
winapi = { version = "0.3", features = ["winuser", "windef"] }
